--- a/public/update-product.html
+++ b/public/update-product.html
@@ -187,14 +187,15 @@ button:active {
             </select>
 
             <label for="productName">Product Name:</label>
-            <input type="text" id="productName" required>
+            <input type="text" id="productName" placeholder="productName"required>
 
             <label for="price">Price:</label>
-            <input type="number" id="price" required>
+            <input type="number" id="price" placeholder="price"required>
 
             <label for="imageURL">Image URL:</label>
-            <input type="url" id="imageURL" required>
-
+            <input type="url" id="imageURL" placeholder="imageURL"required>
+            <label for="stock">Stock:</label>
+            <input type="number" id="stock" name="stock" placeholder="Stock" required />
             <button type="submit">Update Product</button>
             <p class="loading" id="loadingMessage">Updating product...</p>
         </form>
@@ -252,7 +253,7 @@ button:active {
             document.getElementById("productName").value = product.name;
             document.getElementById("price").value = product.price;
             document.getElementById("imageURL").value = product.imageURL;
-
+            document.getElementById("stock").value = product.stock;
             document.getElementById("updateForm").style.display = "block";
         }
 
@@ -269,6 +270,7 @@ button:active {
                 name: document.getElementById("productName").value.trim(),
                 price: parseFloat(document.getElementById("price").value),
                 imageURL: document.getElementById("imageURL").value.trim(),
+                stock: parseInt(document.getElementById("stock").value),
             };
 
             try {
