Updated add to cart

--- a/public/ecommerce.html
+++ b/public/ecommerce.html
@@ -417,7 +417,7 @@
                 <img src="images/garderseed.jpg" alt="Seeds">
                 <p>Seeds</p>
             </div>
-            <div class="category">
+            <div class="category" id="fertiliser">
                 <img src="images/coconutcoir.jpg" alt="Fertilizers & Soil">
                 <p>Fertilizers & Soil</p>
             </div>
