--- a/public/fertiliser.html
+++ b/public/fertiliser.html
@@ -1,258 +1,272 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f5f7fa;
-            margin: 0;
-            padding: 0;
-        }
-        .nav-bar {
-            display: flex;
-            background-color: #2c5f2d;
-            color: white;
-            justify-content: space-between;
-            align-items: center;
-            padding: 15px 20px;
-            position: sticky;
-            top: 0;
-        }
-
-        .logo {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            font-size: 24px;
-            font-weight: bold;
-        }
-
-        .nav-list ul {
-            list-style: none;
-            display: flex;
-            margin: 0;
-            padding: 0;
-        }
-
-        .nav-list li {
-            margin: 0 15px;
-        }
-
-        .nav-list a {
-            text-decoration: none;
-            color: white;
-            padding: 8px 12px;
-            transition: 0.3s;
-        }
-
-        .nav-list a:hover {
-            background-color: #1e4a1c;
-            border-radius: 5px;
-            font-weight: bold;
-        }
-        .user-icon {
-            position: relative;
-            cursor: pointer;
-        }
-
-        .user-dropdown {
-            display: none;
-            position: absolute;
-            right: 0;
-            top: 30px;
-            background: white;
-            padding: 10px;
-            width: 150px;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            border-radius: 5px;
-            list-style: none;
-        }
-
-        .user-dropdown li {
-            padding: 8px 10px;
-        }
-
-        .user-dropdown li a {
-            text-decoration: none;
-            color: black;
-            display: block;
-            transition: background 0.3s ease;
-        }
-
-        .user-dropdown li a:hover {
-            background-color: #f1f1f1;
-        }
-
-        .user-icon:hover .user-dropdown {
-            display: block;
-        }
-        .auth-cart{
-            display: flex;
-            justify-items: space-around;
-            gap: 15px;
-        }
-        .products {
-            text-align: center;
-            padding: 30px;
-        }
-
-        .product-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-        }
-
-        .product-card {
-            width: 250px;
-            background-color: #f4f4f4;
-            padding: 15px;
-            border-radius: 10px;
-            text-align: center;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .product-card img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-            border-radius: 10px;
-            transition: transform 0.3s ease;
-        }
-
-        .product-card img:hover {
-            transform: scale(1.05);
-        }
-
-        .buy-btn {
-            background-color: #2c5f2d;
-            color: white;
-            border: none;
-            padding: 10px;
-            font-size: 14px;
-            cursor: pointer;
-            width: 100%;
-            border-radius: 5px;
-            margin-top: 10px;
-            transition: 0.3s;
-        }
-
-        .buy-btn:hover {
-            background-color: #1e4a1c;
-        }
-        
-        .add-btn {
-            background-color: #2c5f2d;
-            color: white;
-            border: none;
-            padding: 10px;
-            font-size: 14px;
-            cursor: pointer;
-            width: 100%;
-            border-radius: 5px;
-            margin-top: 10px;
-            transition: 0.3s;
-        }
-
-        .add-btn:hover {
-            background-color: #1e4a1c;
-        }
-
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Fertilisers</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #f5f7fa;
+      margin: 0;
+      padding: 0;
+    }
+    .nav-bar {
+      display: flex;
+      background-color: #2c5f2d;
+      color: white;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 20px;
+      position: sticky;
+      top: 0;
+    }
+    .logo {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-size: 24px;
+      font-weight: bold;
+    }
+    .nav-list ul {
+      list-style: none;
+      display: flex;
+      margin: 0;
+      padding: 0;
+    }
+    .nav-list li {
+      margin: 0 15px;
+    }
+    .nav-list a {
+      text-decoration: none;
+      color: white;
+      padding: 8px 12px;
+      transition: 0.3s;
+    }
+    .nav-list a:hover {
+      background-color: #1e4a1c;
+      border-radius: 5px;
+      font-weight: bold;
+    }
+    .user-icon {
+      position: relative;
+      cursor: pointer;
+    }
+    .user-dropdown {
+      display: none;
+      position: absolute;
+      right: 0;
+      top: 30px;
+      background: white;
+      padding: 10px;
+      width: 150px;
+      box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+      border-radius: 5px;
+      list-style: none;
+    }
+    .user-dropdown li {
+      padding: 8px 10px;
+    }
+    .user-dropdown li a {
+      text-decoration: none;
+      color: black;
+      display: block;
+      transition: background 0.3s ease;
+    }
+    .user-dropdown li a:hover {
+      background-color: #f1f1f1;
+    }
+    .user-icon:hover .user-dropdown {
+      display: block;
+    }
+    .auth-cart {
+      display: flex;
+      justify-items: space-around;
+      gap: 15px;
+    }
+    .products {
+      text-align: center;
+      padding: 30px;
+    }
+    .product-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+    }
+    .product-card {
+      width: 250px;
+      background-color: #f4f4f4;
+      padding: 15px;
+      border-radius: 10px;
+      text-align: center;
+      box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+    }
+    .product-card img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 10px;
+      transition: transform 0.3s ease;
+    }
+    .product-card img:hover {
+      transform: scale(1.05);
+    }
+    .buy-btn, .add-btn {
+      background-color: #2c5f2d;
+      color: white;
+      border: none;
+      padding: 10px;
+      font-size: 14px;
+      cursor: pointer;
+      width: 100%;
+      border-radius: 5px;
+      margin-top: 10px;
+      transition: 0.3s;
+    }
+    .buy-btn:hover, .add-btn:hover {
+      background-color: #1e4a1c;
+    }
+    #cart-count {
+      background: red;
+      color: white;
+      font-size: 12px;
+      padding: 2px 6px;
+      border-radius: 50%;
+      position: relative;
+      top: -10px;
+      left: -5px;
+    }
+    .out-of-stock {
+      color: red;
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
-    <nav class="nav-bar">
-        <div class="logo">
-            <i class="fa-solid fa-truck-fast"></i>
-            <span>BuyNest</span>
-        </div>
-        <div class="nav-list">
-            <ul>
-                <li><a href="ecommerce.html#home">Home</a></li>
-                <li>
-                    <a href="ecommerce.html#products">Products</a>
-                </li>
-                            
-                <li><a href="ecommerce.html#contact">Contact Us</a></li>
-            </ul>
-        </div>
-        <div class="auth-cart">
-            <div class="user-icon">
-                <i class="fa-solid fa-user"></i>
-                <ul class="user-dropdown">
-                    <li><a href="#sign-in">Sign In</a></li>
-                    <li><a href="#sign-up">Sign Up</a></li>
-                </ul>
-            </div>            
-            <div class="cart">
-                <i class="fa-solid fa-cart-shopping"></i>
-            </div>
-        </div>
-    </nav>
-    <section id="plants" class="products">
-        <h2 class="section-title">Our Plant Collection</h2>
-        <div class="product-container">
-            <div class="product-card">
-                <img src="images\vermicompost.jpg" alt="Indoor Plant">
-                <h3>Indoor LED lights</h3>
-                <p>$18.99</p>
-                <button class="buy-btn">Buy Now</button>
-                <button class="add-btn">Add to Cart</button>
-            </div>
-            <div class="product-card">
-                <img src="images\indoor3.jpg" alt="Bonsai Tree">
-                <h3>Palm Plants</h3>
-                <p>$39.99</p>
-                <button class="buy-btn">Buy Now</button>
-                <button class="add-btn">Add to Cart</button>
-            </div>
-            <div class="product-card">
-                <img src="images\indoor1.jpg" alt="Hanging Plant">
-                <h3>Money Plant</h3>
-                <p>$22.50</p>
-                <button class="buy-btn">Buy Now</button>
-                <button class="add-btn">Add to Cart</button>
-            </div>
-            <div class="product-card">
-                <img src="images\plant2.jpg" alt="Succulent Set">
-                <h3>Palm Plant</h3>
-                <p>$34.99</p>
-                <button class="buy-btn">Buy Now</button>
-                <button class="add-btn">Add to Cart</button>
-            </div>
-            <div class="product-card">
-                <img src="images\indoor5.jpg" alt="Succulent Set">
-                <h3>Aralia Golden Plant</h3>
-                <p>$30.99</p>
-                <button class="buy-btn">Buy Now</button>
-                <button class="add-btn">Add to Cart</button>
-            </div>
-            <div class="product-card">
-                <img src="images\indoor4.jpg" alt="Succulent Set">
-                <h3>Lucky Bamboo Plant</h3>
-                <p>$30.99</p>
-                <button class="buy-btn">Buy Now</button>
-                <button class="add-btn">Add to Cart</button>
-            </div>
-            <div class="product-card">
-                <img src="images\indoor6.jpg" alt="Succulent Set">
-                <h3>Turtle Vine</h3>
-                <p>$30.99</p>
-                <button class="buy-btn">Buy Now</button>
-                <button class="add-btn">Add to Cart</button>
-            </div>
-            <div class="product-card">
-                <img src="images\indoor7.jpg" alt="Succulent Set">
-                <h3>Turtle Vine</h3>
-                <p>$30.99</p>
-                <button class="buy-btn">Buy Now</button>
-                <button class="add-btn">Add to Cart</button>
-            </div>
-        </div>
-    </section>
+  <nav class="nav-bar">
+    <div class="logo">
+      <i class="fa-solid fa-truck-fast"></i>
+      <span>BuyNest</span>
+    </div>
+    <div class="nav-list">
+      <ul>
+        <li><a href="ecommerce.html#home">Home</a></li>
+        <li><a href="ecommerce.html#products">Products</a></li>
+        <li><a href="ecommerce.html#contact">Contact Us</a></li>
+      </ul>
+    </div>
+    <div class="auth-cart">
+      <div class="user-icon">
+        <i class="fa-solid fa-user"></i>
+        <ul class="user-dropdown">
+          <li><a href="#sign-in">Sign In</a></li>
+          <li><a href="#sign-up">Sign Up</a></li>
+        </ul>
+      </div>
+      <div class="cart">
+        <i class="fa-solid fa-cart-shopping"></i>
+        <span id="cart-count">0</span>
+      </div>
+    </div>
+  </nav>
+
+  <section id="fertiliser" class="products">
+    <h2 class="section-title">Our Fertiliser Collection</h2>
+    <div id="product-list" class="product-container"></div>
+  </section>
+
+  <script>
+    async function loadFertiliser() {
+      try {
+        const response = await fetch("http://127.0.0.1:3333/products?category=fertiliser");
+        const fertiliser = await response.json();
+
+        const productList = document.getElementById("product-list");
+        productList.innerHTML = "";
+
+        fertiliser.forEach(fertiliser => {  // Corrected to singular 'fertiliser'
+          const productCard = document.createElement("div");
+          productCard.classList.add("product-card");
+
+          const image = document.createElement("img");
+          image.src = fertiliser.imageURL;
+          image.alt = fertiliser.name;
+
+          const name = document.createElement("h3");
+          name.textContent = fertiliser.name;
+
+          const price = document.createElement("p");
+          price.textContent = `Price: ₹${fertiliser.price}`;
+
+          const stockDiv = document.createElement("p");
+          const buyNowBtn = document.createElement("button");
+          buyNowBtn.textContent = "Buy Now";
+          buyNowBtn.classList.add("buy-btn");
+
+          const addToCartBtn = document.createElement("button");
+          addToCartBtn.textContent = "Add to Cart";
+          addToCartBtn.classList.add("add-btn");
+
+          if (fertiliser.stock === 0) {
+            stockDiv.textContent = "Out of Stock";
+            stockDiv.style.color = "red";
+            buyNowBtn.disabled = true;
+            buyNowBtn.style.opacity = 0.5;
+            addToCartBtn.disabled = true;
+            addToCartBtn.style.opacity = 0.5;
+          } else {
+            stockDiv.textContent = `In Stock: ${fertiliser.stock}`;
+            stockDiv.style.color = "green";
+          }
+
+          buyNowBtn.onclick = () => buyNow(fertiliser._id);
+          addToCartBtn.onclick = () => addToCart(fertiliser.name, fertiliser.price);
+
+          productCard.appendChild(image);
+          productCard.appendChild(name);
+          productCard.appendChild(price);
+          productCard.appendChild(stockDiv);
+          productCard.appendChild(buyNowBtn);
+          productCard.appendChild(addToCartBtn);
+
+          productList.appendChild(productCard);
+        });
+      } catch (error) {
+        console.error("❌ Error loading fertilisers:", error);
+      }
+    }
+
+    function addToCart(name, price) {
+      let cart = JSON.parse(localStorage.getItem("cart")) || [];
+      const existingItem = cart.find(item => item.name === name);
+
+      if (existingItem) {
+        existingItem.quantity += 1;
+      } else {
+        cart.push({ name, price, quantity: 1 });
+      }
+
+      localStorage.setItem("cart", JSON.stringify(cart));
+      alert(`${name} added to cart!`);
+      updateCartCount();
+    }
+
+    function updateCartCount() {
+      const cart = JSON.parse(localStorage.getItem("cart")) || [];
+      const totalItems = cart.reduce((sum, item) => sum + item.quantity, 0);
+      document.getElementById("cart-count").textContent = totalItems;
+    }
+
+    function buyNow(productId) {
+      window.location.href = `checkout.html?id=${productId}`;
+    }
+
+    window.onload = () => {
+      loadFertiliser();
+      updateCartCount();
+    };
+  </script>
 </body>
 </html>
