--- a/public/seeds.html
+++ b/public/seeds.html
@@ -23,7 +23,6 @@
             position: sticky;
             top: 0;
         }
-
         .logo {
             display: flex;
             align-items: center;
@@ -31,25 +30,21 @@
             font-size: 24px;
             font-weight: bold;
         }
-
         .nav-list ul {
             list-style: none;
             display: flex;
             margin: 0;
             padding: 0;
         }
-
         .nav-list li {
             margin: 0 15px;
         }
-
         .nav-list a {
             text-decoration: none;
             color: white;
             padding: 8px 12px;
             transition: 0.3s;
         }
-
         .nav-list a:hover {
             background-color: #1e4a1c;
             border-radius: 5px;
@@ -59,7 +54,6 @@
             position: relative;
             cursor: pointer;
         }
-
         .user-dropdown {
             display: none;
             position: absolute;
@@ -72,42 +66,35 @@
             border-radius: 5px;
             list-style: none;
         }
-
         .user-dropdown li {
             padding: 8px 10px;
         }
-
         .user-dropdown li a {
             text-decoration: none;
             color: black;
             display: block;
             transition: background 0.3s ease;
         }
-
         .user-dropdown li a:hover {
             background-color: #f1f1f1;
         }
-
         .user-icon:hover .user-dropdown {
             display: block;
         }
-        .auth-cart{
+        .auth-cart {
             display: flex;
-            justify-items: space-around;
             gap: 15px;
         }
         .products {
             text-align: center;
             padding: 30px;
         }
-
         .product-container {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
             gap: 20px;
         }
-
         .product-card {
             width: 250px;
             background-color: #f4f4f4;
@@ -116,7 +103,6 @@
             text-align: center;
             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
         }
-
         .product-card img {
             width: 100%;
             height: 200px;
@@ -124,28 +110,10 @@
             border-radius: 10px;
             transition: transform 0.3s ease;
         }
-
         .product-card img:hover {
             transform: scale(1.05);
         }
-
-        .buy-btn {
-            background-color: #2c5f2d;
-            color: white;
-            border: none;
-            padding: 10px;
-            font-size: 14px;
-            cursor: pointer;
-            width: 100%;
-            border-radius: 5px;
-            margin-top: 10px;
-            transition: 0.3s;
-        }
-
-        .buy-btn:hover {
-            background-color: #1e4a1c;
-        }
-        
+        .buy-btn,
         .add-btn {
             background-color: #2c5f2d;
             color: white;
@@ -158,11 +126,21 @@
             margin-top: 10px;
             transition: 0.3s;
         }
-
+        .buy-btn:hover,
         .add-btn:hover {
             background-color: #1e4a1c;
         }
-        </style>
+        .buy-btn:disabled,
+        .add-btn:disabled {
+            background-color: grey;
+            cursor: not-allowed;
+        }
+        .out-of-stock {
+            color: red;
+            font-weight: bold;
+            margin-top: 10px;
+        }
+    </style>
 </head>
 <body>
     <nav class="nav-bar">
@@ -173,10 +151,7 @@
         <div class="nav-list">
             <ul>
                 <li><a href="ecommerce.html#home">Home</a></li>
-                <li>
-                    <a href="ecommerce.html#products">Products</a>
-                </li>
-                            
+                <li><a href="ecommerce.html#products">Products</a></li>
                 <li><a href="ecommerce.html#contact">Contact Us</a></li>
             </ul>
         </div>
@@ -187,16 +162,16 @@
                     <li><a href="#sign-in">Sign In</a></li>
                     <li><a href="#sign-up">Sign Up</a></li>
                 </ul>
-            </div>            
+            </div>
             <div class="cart">
                 <i class="fa-solid fa-cart-shopping"></i>
             </div>
         </div>
     </nav>
-    <section id="plants" class="products">
+
+    <section class="products">
         <h2 class="section-title">Our Seeds Collection</h2>
-        <div id="product-list" class="product-container">
-        </div>
+        <div id="product-list" class="product-container"></div>
     </section>
 
     <script>
@@ -205,46 +180,70 @@
                 .then(response => response.json())
                 .then(seeds => {
                     const productList = document.getElementById("product-list");
-                    productList.innerHTML = ""; 
+                    productList.innerHTML = "";
+
                     seeds.forEach(seed => {
                         const productCard = document.createElement("div");
                         productCard.classList.add("product-card");
+
                         productCard.innerHTML = `
                             <img src="${seed.imageURL}" alt="${seed.name}">
                             <h3>${seed.name}</h3>
                             <p>Price: ₹${seed.price}</p>
                             <p>Stock: ${seed.stock}</p>
-                             <button 
-                                class="buy-btn" 
-                                onclick="buyNow('${seed._id}')" 
-                                ${seed.stock === 0 ? "disabled style='background: gray; cursor: not-allowed;'" : ""}
-                            >
-                                ${seed.stock === 0 ? "Out of Stock" : "Buy Now"}
-                            </button>
-                            <button 
-                                class="add-btn" 
-                                onclick="addToCart('${seed.name}', ${seed.price})" 
-                                ${seed.stock === 0 ? "disabled style='background: gray; cursor: not-allowed;'" : ""}
-                            >
-                                Add to Cart
-                            </button>
                         `;
+
+                        if (parseInt(seed.stock) === 0) {
+                            productCard.innerHTML += `
+                                <p class="out-of-stock">Out of Stock</p>
+                                <button class="buy-btn" disabled>Buy Now</button>
+                                <button class="add-btn" disabled>Add to Cart</button>
+                            `;
+                        } else {
+                            productCard.innerHTML += `
+                                <button class="buy-btn" onclick="buyNow('${seed._id}')">Buy Now</button>
+                                <button class="add-btn" onclick="addToCart('${seed.name}', ${seed.price})">Add to Cart</button>
+                            `;
+                        }
+
                         productList.appendChild(productCard);
                     });
                 })
                 .catch(error => console.error("❌ Error loading seeds:", error));
         }
 
-
         function addToCart(name, price) {
-            alert(`${name} added to cart!`);
+            let cart = JSON.parse(localStorage.getItem("cart")) || [];
+
+            const existingItem = cart.find(item => item.name === name);
+            if (existingItem) {
+                existingItem.quantity += 1;
+            } else {
+                cart.push({ name, price, quantity: 1 });
             }
-        function buyNow(productId) {
-            console.log("Buy Now Clicked! Product ID:", productId);  // ✅ Correct Debugging
-            window.location.href = `checkout.html?id=${productId}`;  // ✅ Pass correct ID in URL
+
+            localStorage.setItem("cart", JSON.stringify(cart));
+            updateCartCount();
+            alert(`${name} added to cart!`);
         }
 
-        window.onload = loadSeeds;
+        function updateCartCount() {
+            const cart = JSON.parse(localStorage.getItem("cart")) || [];
+            const total = cart.reduce((sum, item) => sum + item.quantity, 0);
+            const cartCount = document.getElementById("cart-count");
+            if (cartCount) {
+                cartCount.textContent = total;
+            }
+        }
+
+        function buyNow(productId) {
+            window.location.href = `checkout.html?id=${productId}`;
+        }
+
+        window.onload = () => {
+            loadSeeds();
+            updateCartCount();
+        };
     </script>
 </body>
 </html>
